# apertium-mos

./: Makefile.am  README  apertium-mos.mos.dix  apertium-mos.pc.in  apertium-mos.post-mos.dix  configure.ac  modes.xml
